ingress-controller/my-ingress-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: "2021-07-28T01:53:47Z"
  generation: 1
  labels:
    app: nginx
  name: nginx
  namespace: my-ingress-app
  resourceVersion: "2088"
  uid: 8edd0b38-2ea6-43ca-b1c6-6b3b7ae28525
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nginx
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
