ingress-controller/my-ingress-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: "2021-07-28T02:11:18Z"
  generation: 1
  name: nginx
  namespace: my-ingress-app
  resourceVersion: "3924"
  uid: 34f623c1-07a0-445e-a0a4-6567fbdba63e
spec:
  ingressClassName: default
  rules:
  - host: nginx.192.168.65.4.xip.io
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
